--- a/package.json
+++ b/package.json
@@ -25,10 +25,14 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@ng-bootstrap/ng-bootstrap": "^2.0.0-alpha.0",
     "@ng-bootstrap/schematics": "^2.0.0-alpha.1",
+    "@types/file-saver": "^2.0.5",
     "bootstrap": "^5.2.2",
+    "file-saver": "^2.0.5",
     "ng-multiselect-dropdown": "^0.3.9",
     "ng2-search-filter": "^0.5.1",
     "ngx-bootstrap": "^9.0.0",
+    "ngx-print-element": "^2.0.15",
+    "or": "^0.2.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
