--- a/ans-k8s-deployment.yml
+++ b/ans-k8s-deployment.yml
@@ -10,5 +10,5 @@
       dest: /opt/kubernetes 
   - name: create a deployment    
     command: kubectl apply - f / opt / kubernetes / deployment.yml          
-    # - name: update deployment with new pods if image updated in docker hub  
-    #  command: kubectl rollout restart deployment.v1.apps / inventoryui - docker - container
+  - name: update deployment with new pods if image updated in docker hub  
+    command: kubectl rollout restart deployment.v1.apps/inventoryui-docker-container
