--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng build --base-href /admin-app/ --output-path=./deploy/dev",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -31,7 +31,7 @@
     "ng-multiselect-dropdown": "^0.3.9",
     "ng2-search-filter": "^0.5.1",
     "ngx-bootstrap": "^9.0.0",
-    "ngx-print-element": "^2.0.15",
+    "ngx-print-element": "2.0.15",
     "or": "^0.2.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
