--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng build --base-href /admin-app/ --output-path=./deploy/dev",
-    "build": "ng build",
+    "start": "ng serve",
+    "build": "ng build --base-href /admin-app/ --output-path=./deploy/dev",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
