--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --base-href /admin-app/ --output-path=./deploy/dev",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
