--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "@ng-bootstrap/ng-bootstrap": "^2.0.0-alpha.0",
     "@ng-bootstrap/schematics": "^2.0.0-alpha.1",
     "@types/file-saver": "^2.0.5",
+    "angular-keyclock": "^1.0.0",
     "bootstrap": "^5.2.2",
     "file-saver": "^2.0.5",
+    "keycloak-angular": "^14.1.0",
+    "keycloak-js": "^22.0.5",
     "ng-multiselect-dropdown": "^0.3.9",
     "ng2-search-filter": "^0.5.1",
     "ngx-bootstrap": "^9.0.0",
